--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "katex": "^0.16.10",
     "react": "^18.2.0",
     "react-ace": "^11.0.1",
+    "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18.2.0",
     "react-markdown": "^9.0.1",
     "react-router-dom": "^6.22.3",
